--- a/client/src/components/tasks/TaskCard.css
+++ b/client/src/components/tasks/TaskCard.css
@@ -71,3 +71,15 @@
   font-weight: 700;
   font-size: 13px;
 }
+
+.avatar-stack {
+  display: inline-flex;
+  align-items: center;
+}
+
+.avatar-more {
+  margin-left: 6px;
+  font-size: 11px;
+  font-weight: 700;
+  color: #64748b;
+}
